+ Partial update for delimiters from [] to {}

--- a/math/notes/prd-algebra/cmp-multilinear-algebra.tex
+++ b/math/notes/prd-algebra/cmp-multilinear-algebra.tex
@@ -14,7 +14,7 @@
 					\item  \m{1 ⊗ 2 = 2 ⊗ 1 = 0 ⊗ 1 = 0},
 					\item  \m{1 ⊗ 3 = 3 ⊗ 1 = 1 ⊗ 1 + 2 ⊗ 1 = 1 ⊗ 1},
 				\stopitemize
-				so \m{ℤ_2 ⊗_ℤ ℤ_4 = \bcrl[0 ⊗ 0, 1 ⊗ 1] ≃ ℤ_2}.
+				so \m{ℤ_2 ⊗_ℤ ℤ_4 = \bcrl{0 ⊗ 0, 1 ⊗ 1} ≃ ℤ_2}.
 
 			\item  \m{ℤ_6 ⊗_ℤ ℤ_4 ≃ ℤ_2}, because
 				\startitemize [1, nowhite, intro]
@@ -27,11 +27,11 @@
 
 			\item  In general, \m{ℤ_p ⊗_ℤ ℤ_q ≃ ℤ_{\gcd(p, q)}}.
 
-			\item  \m{ℚ ⊗_ℤ ℤ_n = 0}, because \m{∀ \brnd[\frac{p}{q}, b] ∈ ℚ × ℤ_n, \frac{p}{q} ⊗ b = \frac{np}{nq} ⊗ b = \frac{p}{nq} ⊗ (nb) = 0}.
+			\item  \m{ℚ ⊗_ℤ ℤ_n = 0}, because \m{∀ \brnd{\frac{p}{q}, b} ∈ ℚ × ℤ_n, \frac{p}{q} ⊗ b = \frac{np}{nq} ⊗ b = \frac{p}{nq} ⊗ (nb) = 0}.
 
 				\comment{Remember that we can only move integers around, not fractions, because the base field is \m{ℤ}.}
 
-			\item  \m{ℚ ⊗_ℤ (ℚ/ℤ) = 0}, because \m{∀ \brnd[\frac{p}{q}, \frac{a}{b}] ∈ ℚ × (ℚ/ℤ), \frac{p}{q} ⊗ \frac{a}{b} = \frac{bp}{bq} ⊗ \frac{a}{b} = \frac{p}{bq} ⊗ \frac{ab}{b} = \frac{p}{bq} ⊗ a = \frac{p}{bq} ⊗ 0 = 0}.
+			\item  \m{ℚ ⊗_ℤ (ℚ/ℤ) = 0}, because \m{∀ \brnd{\frac{p}{q}, \frac{a}{b}} ∈ ℚ × (ℚ/ℤ), \frac{p}{q} ⊗ \frac{a}{b} = \frac{bp}{bq} ⊗ \frac{a}{b} = \frac{p}{bq} ⊗ \frac{ab}{b} = \frac{p}{bq} ⊗ a = \frac{p}{bq} ⊗ 0 = 0}.
 
 			\item  \m{ℂ ⊗_ℝ ℝ ≃ ℂ}, because \m{(a + b 𝚤) ⊗ r = (ar)(1 ⊗ 1) + (br)(𝚤 ⊗ 1)}, so \m{ℂ ⊗_ℝ ℝ = \linspan[1 ⊗ 1, 𝚤 ⊗ 1] ≃ ℂ}. Moreover \m{2 = \dim_ℝ (ℂ ⊗_ℝ ℝ) = \dim_ℝ ℂ ⋅ \dim_ℝ ℝ = 2 ⋅ 1}.
 
