--- a/math/notes/prd-research/cmp-anticipating-integrals.tex
+++ b/math/notes/prd-research/cmp-anticipating-integrals.tex
@@ -19,7 +19,7 @@
 \startchapter [title={Miscellaneous}]
 	
 	\startexample
-		The process \m{X} given by \m{X_t = B_{\frac12 (t + T)} - B_t)} cannot be expressed as a Borel function of \m{B_T - B_⋅}.
+		The process \m{X} given by \m{X_t = B_{\frac12 (t + T)} - B_t} cannot be expressed as a Borel function of \m{B_T - B_⋅}.
 	\stopexample
 \stopchapter
 
