--- a/math/notes/prd-combinatorics/cmp-basics-exercises.tex
+++ b/math/notes/prd-combinatorics/cmp-basics-exercises.tex
@@ -23,7 +23,7 @@
 		\stopexercise
 
 		\startexercise [title={counting integers}]
-			How many integers in \m{\bcrl[1, ⋯, 100]} are divisible by 2, 3 or 5?
+			How many integers in \m{[100] = \bcrl{1, ⋯, 100}} are divisible by 2, 3 or 5?
 		\stopexercise
 
 		\startexercise [title={stars and bars problems}]
