--- a/math/bibliographies/Kuo-integral.bib
+++ b/math/bibliographies/Kuo-integral.bib
@@ -113,10 +113,13 @@
 	doi = {10.31390/cosa.7.2.05},
 	url = {https://digitalcommons.lsu.edu/cosa/vol7/iss2/5}}
 
-@inbook{KuoSaeTangSzozda2013,
+@incollection{KuoSaeTangSzozda2013,
 	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
-	title = {And isometry formula for a new stochastic integral},
+	title = {An isometry formula for a new stochastic integral},
+	editor = {Accardi, Luigi and Fagnola, Franco},
 	booktitle = {Quantum Probability and Related Topics},
+	series = {QP-PQ: Quantum Probability and White Noise Analysis},
+	publisher = {World Scientific},
 	pages = {222–232},
 	year = 2013,
 	volume = 29,
@@ -126,19 +129,22 @@
 	abstract = {The isometry formula for the Itô integral is generalized to a new stochastic integral involving both adapted and instantly independent stochastic processes. The proof is rather elementary. An example is given to illustrate the isometry formula.}}
 
 
-@inbook{KuoSaeTangSzozda2012,
+@incollection{KuoSaeTangSzozda2012b,
 	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
 	title = {A stochastic integral for adapted and instantly independent stochastic processes},
+	editor = {Cohen, Samuel N and Madan, Dilip and Siu, Tak Kuen and Yang, Hailiang},
 	booktitle = {Stochastic Processes, Finance and Control},
+	series={Advances in Statistics, Probability and Actuarial Science},
+	publisher = {World Scientific},
 	pages = {53–71},
 	year = 2012,
-	volume = 29,
+	volume = 1,
 	doi = {10.1142/9789814383318_0003},
 	URL = {https://www.worldscientific.com/doi/abs/10.1142/9789814383318_0003},
 	eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789814383318_0003},
-    abstract = { Abstract We introduce a new class of stochastic processes, called near-martingales, which arise in the study of a new stochastic integral defined by Ayed and Kuo. We obtain a special version of the Itô isometry for this new stochastic integral of certain instantly independent stochastic processes. We also prove a formula that allows us to express the new integral in terms of the classical Itô and Riemann integrals.}}
+    abstract = {We introduce a new class of stochastic processes, called near-martingales, which arise in the study of a new stochastic integral defined by Ayed and Kuo. We obtain a special version of the Itô isometry for this new stochastic integral of certain instantly independent stochastic processes. We also prove a formula that allows us to express the new integral in terms of the classical Itô and Riemann integrals.}}
 
-@article{KuoSaeTangSzozda2012,
+@article{KuoSaeTangSzozda2012a,
 	author = {Kuo, Hui-Hsiung Sae-Tang, Anuwat and Szozda, Benedykt},
 	title = {The Itô formula for a new stochastic integral},
 	year = 2012,
