--- a/teaching/MATH1550/prd-MATH1550.tex
+++ b/teaching/MATH1550/prd-MATH1550.tex
@@ -21,7 +21,8 @@
 \startbodymatter
 	% \component quiz2-20200124
 	% \component quiz3-20200131
-	\component test1-20200204
+	% \component test1-20200204
+	\component quiz4-20200221
 
 \stopbodymatter
 
